# Felix

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
Encoder/API/: IEncoder.hpp
Felix/: AudioOut.cpp  AudioOut.hpp  BreakpointEditor.cpp  CPUEditor.cpp  CPUEditor.hpp  CommandLine.cpp  CommandLine.hpp  ConfigProvider.cpp  ConfigProvider.hpp  Debugger.cpp  Debugger.hpp  DisasmEditor.cpp  Ex.hpp  IRenderer.hpp  ISystemDriver.hpp  KeyNames.cpp  KeyNames.hpp  Main.cpp  Manager.cpp  Manager.hpp  SysConfig.cpp  SysConfig.hpp  SystemDriver.cpp  SystemDriver.hpp  UI.cpp  UI.hpp  UserInput.cpp  UserInput.hpp  VideoSink.cpp  VideoSink.hpp  WatchEditor.cpp  WatchEditor.hpp  imgui.ini  pch.hpp  version.hpp  version.hpp.in
Felix/renderer/: vk_initializers.hpp  vk_texture.hpp
Felix/shaders/: board_render.comp  lynx_render.comp  lynx_render.comp.spv
Felix/vulkan/: VulkanRenderer.cpp  VulkanRenderer.hpp  vk_initializers.cpp  vk_texture.cpp  vk_types.h
WinFelix/: AudioOut.cpp  AudioOut.hpp  Manager.cpp  Manager.hpp  UI.cpp  WinFelix.vcxproj  WinFelix.vcxproj.filters  WinMain.cpp
helpers/cmake/: glsl-shaders.cmake
helpers/cmake/lua/: CMakeLists.txt
libFelix/: CMakeLists.txt  CPU.cpp  CPU.hpp  Core.cpp  Core.hpp  Encryption.cpp  Encryption.hpp  Log.cpp  Log.hpp  ScriptDebugger.hpp  SymbolSource.cpp  SymbolSource.hpp  Utility.hpp  pch.hpp
